--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+.path {
+    font-family: monospace;
+    background-color: gainsboro;
+    padding: 2px;
+    border-radius: 4px;
+}
